# django-secretballot

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml
anonvoting/: models.py  views.py
docs/source/: conf.py  index.rst  quickstart.rst  usage.rst
secretballot/: __init__.py  apps.py  middleware.py  models.py  receivers.py  settings.py  utils.py  views.py
secretballot/migrations/: 0001_initial.py  0002_auto_20190722_1231.py  0002_auto_20200328_0249.py  0002_auto__add_field_vote_created_at__add_field_vote_updated_at.py
secretballot/tests/: conftest.py  models.py  runtests.py  settings.py  test_default.py  tests.py
tests/: models.py  test_settings.py  tests.py  vote.html
