[metadata]
name = django-secretballot
version = 2.0.0
description = Django anonymous voting application.
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
author = James Turk
author_email = dev@jamesturk.net
maintainer = Basil Shubin
maintainer_email = basil.shubin@gmail.com
url = https://github.com/bashu/django-secretballot/
download_url = https://github.com/bashu/django-secretballot/zipball/master
license = BSD License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Django :: 2.2  
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = django-etc>=1.2.0

[options.packages.find]
exclude =
    tests
    example

[options.extras_require]
develop =
    tox
    django
    pytest-django
    pytest
test =
    pytest-django
    pytest-cov
    pytest

[bdist_wheel]
# No longer universal (Python 3 only) but leaving this section in here will
# trigger zest to build a wheel.
universal = 0

[flake8]
# Some sane defaults for the code style checker flake8
# black compatibility
max-line-length = 88
# E203 and W503 have edge cases handled by black
extend-ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs

[tool:pytest]
DJANGO_SETTINGS_MODULE = secretballot.tests.settings